@@ -32,6 +32,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix unnecessary reloading of job submit plugins.
  -- Allow job submit plugins to be turned on/off with a reconfigure.
  -- Fix segfault when loading/unloading Lua job submit plugin multiple times.
+ -- Fix printing duplicate error messages of jobs rejected by job submit plugin.
 
 * Changes in Slurm 18.08.7
 ==========================
